# trash

./: CMakeLists.txt  bash.h
include/: trash.h
src/: lexer.c  main.c  readline.c
tests/: readline_test.cpp  test.cpp
